--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
-    <!--
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    -->
-    <!-- TODO: I dont know why it didnt work, but this dependency shouldnt come from CDN -->
-    <link rel="stylesheet" href="https://unpkg.com/vue-query-builder@0.7.1/dist/VueQueryBuilder.css"/>
+
+    <link rel=stylesheet href=http://localhost:5000/static/css/bootstrap.min.css>
+    <link rel=stylesheet href=http://localhost:5000/static/css/font-awesome.min.css>
+    <link rel=stylesheet href=http://localhost:5000/static/css/AdminLTE.min.css>
+    <link rel=stylesheet href=http://localhost:5000/static/css/magic-cube.css>
 
     <title>yellow-lines</title>
 </head>
